k8s/deployment-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chachkie-server
  labels:
    app: chachkie-server
    instance: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chachkie-server
      instance: test
  template:
    metadata:
      labels:
        app: chachkie-server
        instance: test
    spec:
      containers:
        - name: chachkie-server
          image: chachkie-server
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "100m"
---
kind: Service
apiVersion: v1
metadata:
  name: chachkie-server
  labels:
    app: chachkie-server
    instance: test
spec:
  type: ClusterIP
  selector:
    app: chachkie-server
    instance: test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
